added comment for contact section

--- a/PortfolioWeb.html
+++ b/PortfolioWeb.html
@@ -155,6 +155,7 @@ p {
     </div>
   </div>
 </div>
+/* add a contact me section */
 <script>
 window.smoothScroll = function(target) {
     var scrollContainer = target;
