--- a/PortfolioWeb.html
+++ b/PortfolioWeb.html
@@ -159,14 +159,16 @@ p {
 <script>
 window.smoothScroll = function(target) {
     var scrollContainer = target;
-    do { //find scroll container
+    //find scroll container
+    do {
         scrollContainer = scrollContainer.parentNode;
         if (!scrollContainer) return;
         scrollContainer.scrollTop += 1;
     } while (scrollContainer.scrollTop == 0);
 
     var targetY = 0;
-    do { //find the top of target relatively to the container
+    //find the top of target relatively to the container
+    do {
         if (target == scrollContainer) break;
         targetY += target.offsetTop;
     } while (target = target.offsetParent);
