added comment for better scrolling

--- a/PortfolioWeb.html
+++ b/PortfolioWeb.html
@@ -157,6 +157,7 @@ p {
 </div>
 /* add a contact me section */
 <script>
+// TODO: need to find a smoother way to scroll 
 window.smoothScroll = function(target) {
     var scrollContainer = target;
     //find scroll container
