--- a/PortfolioWeb.html
+++ b/PortfolioWeb.html
@@ -156,6 +156,19 @@ p {
   </div>
 </div>
 /* add a contact me section */
+
+<script src="https://www.gstatic.com/firebasejs/3.7.0/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAe1N8MZR33dAcqZSIZyWCkadCyEa6N8kY",
+    authDomain: "github-status-a8907.firebaseapp.com",
+    databaseURL: "https://github-status-a8907.firebaseio.com",
+    storageBucket: "github-status-a8907.appspot.com",
+    messagingSenderId: "93472190039"
+  };
+  firebase.initializeApp(config);
+</script>
 <script>
 // TODO: need to find a smoother way to scroll
 window.smoothScroll = function(target) {
