--- a/PortfolioWeb.html
+++ b/PortfolioWeb.html
@@ -91,7 +91,7 @@ p {
   height:200px;
 }
 </style>
-
+<!-- Page One -->
 <div class="pageOne">
   <ul class="nav nav-pills">
     <li>
@@ -125,7 +125,7 @@ p {
     </a>
   </div>
 </div>
-
+<!-- Page Two -->
 <div class="pageTwo" id="top" href="top">
   <div class"row">
     <div class="col-md-6 text-center">
